rename config parameter

--- a/notebooks/kaggle_trainer_notebook.ipynb
+++ b/notebooks/kaggle_trainer_notebook.ipynb
@@ -182,7 +182,7 @@
     "    \"callbacks\": {\n",
     "        \"csv_logger\": {\n",
     "            \"enabled\": True,\n",
-    "            \"filename\": \"_Loss_Acc.csv\"\n",
+    "            \"filename\": \"_Training_Loss_Metrics.csv\"\n",
     "        },\n",
     "        \"reduce_lr\": {\n",
     "            \"enabled\": True,\n",
