add config edits

--- a/notebooks/kaggle_trainer_notebook.ipynb
+++ b/notebooks/kaggle_trainer_notebook.ipynb
@@ -165,9 +165,10 @@
     "    \"model_architecture\": \"wat_stacked_unets\",\n",
     "    \"checkpoint_path\": None,\n",
     "    \"epochs\": 3,\n",
-    "    \"batch_size\": 10,\n",
+    "    \"batch_size\": 8,\n",
     "    \"enable_SAP\": True,\n",
     "    \"start_epoch\": 0,\n",
+    "    \"skip_ada_multi_losses_norm\": False, # skip AMLN\n",
     "    \"learning_rate\": 0.001,\n",
     "    \"height\": 256,\n",
     "    \"width\": 256,\n",
