edit config filename_pattern by removing .h5

--- a/notebooks/kaggle_trainer_notebook.ipynb
+++ b/notebooks/kaggle_trainer_notebook.ipynb
@@ -191,7 +191,7 @@
     "        },\n",
     "        \"model_checkpoint\": {\n",
     "            \"enabled\": True,\n",
-    "            \"filename_pattern\": \"wat_stacked_unets_epoch-{epoch:02d}_val_loss-{val_loss:.4f}.h5\"\n",
+    "            \"filename_pattern\": \"wat_stacked_unets_epoch-{epoch:02d}_val_loss-{val_loss:.4f}\"\n",
     "        }\n",
     "    }\n",
     "}\n",
